--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 <div class="jobs">
                     <p id="seek">SEEKING OPPPORTUNITY TO BUILD MY CAREER</p>
                     <button id="sd">SOFTWARE DEVELOPER</button>
-                    <button id="wd">WEB DEVELOPER</button>
-                    <button id="ct">DATA ANALYST</button>
+                    <button id="wd">FULL STACK DEVELOPER</button>
+                    <button id="ct">DATA SCIENTIST</button>
 
                 </div>
             </div>
@@ -49,7 +49,7 @@
     <div id="about">
         <div class="row">
           <div class="about-col-1">
-            <img src="images//CVT_5914.JPG" >
+            <img src="images/pranesh1.jpg" >
           </div>
             <div class="about-col-2">
                <h1>ABOUT ME:</h1>
@@ -63,7 +63,7 @@
                     <a href="http://www.linkedin.com/in/pranesh-krishnan-07197323b"><i class='bx bxl-linkedin'></i></a>
                     
                 </div>
-                <button id="resume"><a href="./images/updated pranesh resume.pdf" download>DOWNLOAD CV<i class='bx bx-download bx-tada'></i></button></a>
+                <button id="resume"><a href="./images/Pranesh_final_resume.pdf" download>DOWNLOAD CV<i class='bx bx-download bx-tada'></i></button></a>
             </div>
         </div>
     </div>
@@ -116,23 +116,27 @@
                 <p id="python">PYTHON</p>
                 </div>
                 <div>
-                    <img src="./images/sql.jpg" alt="" id="img_sql"> 
-                    <p id="sql">MYSQL</p>
+                    <img src="./images/sql.jpg" alt="" > 
+                <p id="sql">MYSQL</p>
+                </div>
+                <div>
+                    <img src="./images/java.jpg" alt=""> 
+                <p id="java">JAVA</p>
                 </div>
             </div>
         </div>
     </div>
     <!------certification---->
     
-    <div id="slide_heading">
+    <div id="slide_heading">    
         <h1>CERTIFICATIONS</h1>
     </div>
     <div id="slide_img">
       <div class="sliding">
          <div class="slider">
+            <img src="./images/udemy certificate.JPG" >
+            <img src="./images/python certification.png" >
             <img src="./images/sql certificate.jpg" >
-            <img src="./images/python certificate.jpg" >
-            <img src="./images/html.jpg" >
          </div>
       </div>
     </div>
