new changes in mail file

--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
                  <h1>HI! I AM <br><span>PRANESH KRISHNAN</span>
                  </h1>
                <p id="graduate"> GRADUATED (MSC SOFTWARE SYSTEM)</p>
-               <h2 id="head2">To do outstanding performance for the growth of
-                esteemed organization to the fullest extent of my
-                 capability and to enhance my personal knowledge.
+               <h2 id="head2">"To work in an environment that promotes continuous learning and advancement, while applying my experience and passion for Software Developer to contribute significantly to the growth and success of the organization"
                 </h2>
                 <div class="jobs">
                     <p id="seek">SEEKING OPPPORTUNITY TO BUILD MY CAREER</p>
